# Projeto-saude

./: CMakeLists.txt  Main.qml
meus-exames-master/meus-exames-master/: main.cpp
meus-exames-master/meus-exames-master/android/: AndroidManifest.xml  build.gradle
meus-exames-master/meus-exames-master/android/res/values/: strings.xml
meus-exames-master/meus-exames-master/qml/: config.json
qml/: Main.qml
