cmake_minimum_required(VERSION 3.16)

project(meusExamesBeta VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOMOC ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Felgo REQUIRED)

set(PRODUCT_IDENTIFIER "com.vinix.meusExames")
set(PRODUCT_VERSION_NAME "1.0.0")
set(PRODUCT_VERSION_CODE 1)

set(PRODUCT_STAGE "test")

set(PRODUCT_LICENSE_KEY "FBA5AADACA2D9BB7BADF1C75B9EEC525F3A11E10111D31A8D8745FC7569CECA38B4B6957402B948801FA78BC485DDC02379B0F8C2DD254E96CE49D8AB616A1AE8A19976177A66662BC321C8B7D9727DA99BDAC3626FB9BBA3225429E4F7379360101CB39D506264EB3CAE95B12C9E8DC1B1A7FDB94C971174CF3F74B3DD78A51F6DF67407498B22F28BB0527326D3934FFD40CDEA13CAD037F6C8B12702EF6E6DAA5477E1D2D49DE69CFCAC44AF71B6391A1EC2FEE776CD502C6FBC8257D92D61F6F33C912D84FD956AA2C512441F2591801C36DD23137BD6C3C9DC1D81F8F82E9BAB962CA24138C3AF0E5F08A4358E370999CB020FD84CAFCE66D615BC376BD3B646ECE97FDFE08254391C555ABDE8E761501A590350F492439306DE89D5E8FBC39DACF2F09EC75ED6839601F1D9A00A489450E1882D931FB5DA35C38C6C0C2")

set(FELGO_PLUGINS
)

file(GLOB_RECURSE QmlFiles RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} qml/*.qml qml/*.js qml/*.mjs)

file(GLOB_RECURSE AssetsFiles RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} assets/* qml/*)
list(REMOVE_ITEM AssetsFiles ${QmlFiles})

qt_add_executable(meusExamesBeta
    main.cpp
    ${QmlFiles}
    ${AssetsFiles}
)

felgo_configure_executable(meusExamesBeta)

deploy_resources("${QmlFiles};${AssetsFiles}")

qt_add_qml_module(meusExamesBeta
    URI meusExamesBeta
    VERSION 1.0
    QML_FILES ${QmlFiles}
    RESOURCES ${AssetsFiles}
    NO_RESOURCE_TARGET_PATH
)

target_compile_definitions(meusExamesBeta
    PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)

target_link_libraries(meusExamesBeta PRIVATE Felgo)

#find_package(FelgoLive REQUIRED)
#target_link_libraries(meusExamesBeta PRIVATE FelgoLive)
